<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.babence.bkvebreszto.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/stopNameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/stopNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:clickable="true"
            android:layout_gravity="center_vertical|start"
            android:maxLines="2"
            android:text="@string/default_stop"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/enableSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb100m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_100m"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopNameLayout" />

    <CheckBox
        android:id="@+id/cb1km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_1km"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb100m" />

    <CheckBox
        android:id="@+id/cb3km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_3km"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb1km" />

    <TextView
        android:id="@+id/textSongName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@mipmap/ic_sound"
        android:drawableLeft="@mipmap/ic_sound"
        android:drawablePadding="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/sound_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbVibrate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/cbVibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_vibrate"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb3km" />




        <Button
            android:id="@+id/getGPS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:text="@string/button_get_GPS"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" />




</android.support.constraint.ConstraintLayout>
